--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,6 +26,7 @@ dev_dependencies:
   build_runner: ^2.4.8
   drift_dev: ^2.13.0
   flutter_lints: ^5.0.0
+  mockito: ^5.4.2
 
 flutter:
   uses-material-design: true
